Fix dark mode search text contrast

--- a/css/themes.css
+++ b/css/themes.css
@@ -100,6 +100,10 @@
     color: #fff !important;
 }
 
+body.dark .ui-autocomplete a {
+    color: #fff !important;
+}
+
 .dark .ui-autocomplete li:hover {
     background-color: #225a91 !important;
 }
